--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,9 @@ a {
   color: inherit;
 }
 
-math-field {
-  outline: none;
-  border: 1px solid rgb(44, 46, 51);
-  border-radius: 10px;
-  padding: 10px;
+body {
+  background-color: black;
+  height: 100vh;
+  margin: 0rem;
+  overflow: hidden; 
 }
